# serde-ndim

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: de.rs  lib.rs  nalgebra.rs  ndarray.rs  ser.rs
src/snapshots/: serde_ndim__nalgebra__tests__inner_mismatch.snap  serde_ndim__nalgebra__tests__inner_mismatch_during_first_descent.snap  serde_ndim__nalgebra__tests__invalid_type.snap  serde_ndim__nalgebra__tests__larger_dimension_count.snap  serde_ndim__nalgebra__tests__matrix.snap  serde_ndim__nalgebra__tests__smaller_dimension_count.snap  serde_ndim__ndarray__tests__dyn_array.snap  serde_ndim__ndarray__tests__inner_mismatch.snap  serde_ndim__ndarray__tests__inner_mismatch.snap.new  serde_ndim__ndarray__tests__inner_mismatch_during_first_descent.snap  serde_ndim__ndarray__tests__inner_mismatch_during_first_descent.snap.new  serde_ndim__ndarray__tests__invalid_dimension_count.snap  serde_ndim__ndarray__tests__invalid_dimension_count.snap.new  serde_ndim__ndarray__tests__invalid_type.snap  serde_ndim__ndarray__tests__invalid_type.snap.new  serde_ndim__ndarray__tests__larger_dimension_count.snap  serde_ndim__ndarray__tests__smaller_dimension_count.snap  serde_ndim__ndarray__tests__static_array_in_non_standard_layout.snap
