[package]
name = "serde-ndim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "*", default-features = false, features = ["alloc"], optional = true }
ndarray = { version = "0.15", default-features = false, optional = true }
serde = "1.0.159"
