[package]
name = "serde-ndim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["alloc"], optional = true }
ndarray = { version = "0.15", default-features = false, optional = true }
serde = "1.0"

[dev-dependencies]
format_serde_error = { version = "0.3.0", default-features = false, features = ["serde_json"] }
insta = "1.29.0"
serde-ndim = { path = ".", features = ["nalgebra", "ndarray", "test"] }
serde_json = "1.0.95"

[features]
test = ["nalgebra/macros", "serde/derive"]
